# deep-research-agent

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  main.py
backend/app/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/app/evals/: __init__.py  metrics.py
backend/app/llm/: __init__.py  provider.py
backend/app/telemetry/: __init__.py  events.py  tracing.py
backend/app/tools/: __init__.py  registry.py  schemas.py  web_fetch.py  web_search.py
backend/evals/: dataset.jsonl  run_evals.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_evals.py  test_graph.py  test_nodes.py  test_tracing.py  test_web_fetch.py  test_web_search.py
frontend/: .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: QueryBar.tsx  ReportView.tsx  StepTimeline.tsx
