[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Agentic web research assistant with a local-first, provider-agnostic LLM and a LangGraph agent loop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.3",
    "langgraph>=0.2.45",
    "langchain>=0.3.7",
    "langchain-core>=0.3.15",
    "langchain-ollama>=0.2.0",
    "langchain-tavily>=0.1.0",
    "httpx>=0.27.2",
    "trafilatura>=1.12.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "ruff>=0.7.2",
    "mypy>=1.13.0",
]

[project.scripts]
research = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["trafilatura.*", "langchain_tavily.*", "langchain_anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
